			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

12-Nov-2005
~~~~~~~~~~~
Added initial support for .desktop files (Thomas Leonard). They are now shown
as executable, with the appropriate icons, and clicking on them runs the
application. You cannot yet drag to them, and there are no tooltips.

28-Oct-2005
~~~~~~~~~~~
Added Hungarian translation for the <About> section in AppInfo.xml
(Andras Mohari).

25-Oct-2005
~~~~~~~~~~~
Updated Japanese translation (Hiroaki Tanaka).

22-Oct-2005
~~~~~~~~~~~
In details mode, clicking on an item while the keyboard focus is visible
moves the focus to the item clicked on (suggested by Anthony DiSante).

19-Oct-2005
~~~~~~~~~~~
Updated Hungarian translation (Andras Mohari).

18-Oct-2005
~~~~~~~~~~~
Updated Estonian translation (Teet Tärno).
Bugfix: An (extremely unlikely to occur) error message was missing some
	arguments (Thomas Leonard; spotted by Andras Mohari).

17-Oct-2005
~~~~~~~~~~~
Updated it.po and Manual-it.xml (Yuri Bongiorno)

02-Oct-2005
~~~~~~~~~~~
Make all option menus into the options box wide enough for the widest item
to avoid resizing when the item is changed (Andras Mohari).

15-Sep-2005
~~~~~~~~~~~
Only require shared-mime-database 0.14, not 0.16. Add the missing subclasses
manually (Thomas Leonard).

13-Sep-2005
~~~~~~~~~~~
Allow some labels used to display file names to wrap over more than one line,
improving display of very long file names (Stephen Watson).
Show progress bar from start when an action is on more than one item
(Stephen Watson).

08-Sep-2005
~~~~~~~~~~~
Bugfix: The refresh feature was accidentally broken during the upgrade to the
	new MIME system (Thomas Leonard; reported by Frantisek Fuka).

04-Sep-2005
~~~~~~~~~~~
Bugfix: If you editing the target of a symlink in the properties box, and then
	unfocussed the entry when the symlink no longer existed, the filer
	would crash trying to display the error message. Added work-around
	(Thomas Leonard; reported as GTK bug #315229).
