@@ -7,6 +7,9 @@
 Added initial support for .desktop files (Thomas Leonard). They are now shown
 as executable, with the appropriate icons, and clicking on them runs the
 application. You cannot yet drag to them, and there are no tooltips.
+Bugfix: If stdin wasn't set when ROX-Filer was started it could get used for
+	the X connection, before ROX-Filer got around to replacing it with
+	/dev/null (Thomas Leonard).
 
 28-Oct-2005
 ~~~~~~~~~~~
